--- a/index.html
+++ b/index.html
@@ -13,12 +13,40 @@
 </head>
 <body>
   <main>
-    
+    <div class="container">
+      <div class="sedans">
+        <img class="car-icon" src="images/icon-sedans.svg" alt="sedan icon">
+        <h2 class="car-heading">Sedans</h2>
+        <p class="car-text">
+          Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
+          or on your next road trip.
+        </p>
+        <button class="btn btn--sedans">Learn More</button>
+      </div>
+      <div class="suvs">
+        <img class="car-icon" src="images/icon-suvs.svg" alt="suv icon">
+        <h2 class="car-heading">SUVs</h2>
+        <p class="car-text">
+          Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
+          and off-road adventures.
+        </p>
+        <button class="btn btn--suvs">Learn More</button>
+      </div>
+      <div class="luxury">
+        <img class="car-icon" src="images/icon-luxury.svg" alt="luxury icon">
+        <h2 class="car-heading">Luxury</h2>
+        <p class="car-text">
+          Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
+          rental and arrive in style.
+        </p>
+        <button class="btn btn--luxury">Learn More</button>
+      </div>
+    </div>
   </main>
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Gabriel Alivide</a>.
+      Coded by <a href="https://twitter.com/laoluwaapo">Gabriel Alivide</a>.
     </div>
   </footer>
 </body>
